More post fixes

--- a/content/post/2013-03-15-drbd-8-4-2-for-fedora-18.md
+++ b/content/post/2013-03-15-drbd-8-4-2-for-fedora-18.md
@@ -13,7 +13,9 @@ tags:
   - fedora
 
 ---
-[<img src="/wp-content/uploads/2012/01/fedorainfinity.png" alt="Fedora Infinity Logo" width="105" height="102" class="alignright size-full wp-image-2712" />][1]If you use [DRBD][2] on Fedora 18, there's a [new client tools package][3] on its way to the stable repositories. The kernel module for DRBD was bumped to 8.4.2 and the client tools have been updated to match it.
+![1]
+
+If you use [DRBD][2] on Fedora 18, there's a [new client tools package][3] on its way to the stable repositories. The kernel module for DRBD was bumped to 8.4.2 and the client tools have been updated to match it.
 
 This [fixes a bug][4] that was submitted earlier this month.
 
