--- a/content/post/2007-08-25-182.md
+++ b/content/post/2007-08-25-182.md
@@ -13,8 +13,10 @@ tags:
 ---
 One of these errors might appear on your website without warning:
 
-`Warning:  DB function failed with error number 1033<br />
-Incorrect information in file: './database_name/table_name.frm' SQL=SELECT col1, col2 FROM table_name WHERE col3 = 'some_value' ORDER BY col1 ASC`
+```
+Warning:  DB function failed with error number 1033
+Incorrect information in file: './database_name/table_name.frm' SQL=SELECT col1, col2 FROM table_name WHERE col3 = 'some_value' ORDER BY col1 ASC
+```
 
 MySQL is telling you that the table structure it has within data files doesn't match the structure in the `.frm` file that's on the disk. There's only a few scenarios where this can happen:
 
